--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js   #设置语言
-node_js: stable     #设置相应的版本
+node_js:
+  - 10 #  #设置相应的版本
+cache: npm
 before_install:
   - npm install -g hexo
   - npm install -g hexo-cli
